syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

service Account {
	rpc CreateAccount (CreateAccountUseCaseGrpcInput) returns (CreateAccountUseCaseGrpcOutput);
	rpc HealthCheck (HealthCheckInput) returns (HealthCheckOutput);
}

message CreateAccountUseCaseGrpcInput {
	string tenantIdentifier = 8;
    string correlationIdentifier = 9;
	string sourcePlatform = 1;
    string executionSource = 2;
    string name = 3;
    string lastName = 4;
    string username = 5;
    string password = 6;
    string email = 7;
}

message HealthCheckInput {
	string name = 1;
}

message HealthCheckOutput {
	string name = 1;
}

message CreateAccountUseCaseGrpcOutput {
	bool created = 1;
	repeated Notification messages = 2;
}	

message Notification {
	string message = 1;
	string typeNotification = 2;
}
