syntax = "proto3";

option csharp_namespace = "GrpcAccountClient";

package greet;

service Account{
	rpc CreateUserAccount (CreateAccountInput) returns (CreateAccountOutput);
}

message CreateAccountInput {
	string username = 1;
	string name = 2;
	string last_name = 3;
	string email = 4;
	string password = 5;
	string confirm_password = 6;
	string tenant_identifier = 7;
	string correlation_identifier = 8;
	string source_platform = 9;
}

message CreateAccountOutput {
	int32 status_code = 1;
	repeated string messages = 2;
}
